# upstage-projects

./: .gitignore  README.md
projects/02-LaLaLlama/agent-serivce/: .gitignore  Modelfile  README.md  env.example  pyproject.toml  requirements.txt  test_evaluation_loading.py  test_hf.py
projects/02-LaLaLlama/agent-serivce/RFP/: 수협_rfp.txt
projects/02-LaLaLlama/agent-serivce/dummy_data_generator/: EXAMPLE_OUTPUT.jsonl  README.md  standalone_evaluation_generator.ipynb  standalone_evaluation_generator.py
projects/02-LaLaLlama/agent-serivce/dummy_data_generator/atom_uiux/: generate_quality_average_3of5.ipynb  generate_quality_excellent_5of5.ipynb  generate_quality_fair_2of5.ipynb  generate_quality_good_4of5.ipynb  generate_quality_poor_1of5.ipynb
projects/02-LaLaLlama/agent-serivce/dummy_data_generator/evaluation_training_data/: evaluation_dataset_temp_1000.jsonl
projects/02-LaLaLlama/agent-serivce/dummy_data_generator/shinhan_log_system/: generate_quality_advanced_5of5.ipynb  generate_quality_basic_3of5.ipynb  generate_quality_excellent_5of5.ipynb  generate_quality_good_4of5.ipynb  generate_quality_standard_4of5.ipynb  proposal_advanced_4of5.html  proposal_basic_3of5.html  proposal_excellent_5of5.html  proposal_good_4of5.html  proposal_standard_4of5.html
projects/02-LaLaLlama/agent-serivce/dummy_data_generator/suhyub_bank_system/: proposal_comprehensive_5of5.html  proposal_innovation_5of5.html  proposal_stability_4of5.html  수협은행더미제안서생성_3of5.ipynb  수협은행더미제안서생성_4of5_실용성.ipynb  수협은행더미제안서생성_4of5_안정성.ipynb  수협은행더미제안서생성_5of5.ipynb  수협은행더미제안서생성_5of5_혁신.ipynb
projects/02-LaLaLlama/agent-serivce/finetune_llama/: preference_dataset.jsonl  requirements.txt  test.py  train_dataset.jsonl  train_dpo.py  train_lora.py
projects/02-LaLaLlama/agent-serivce/finetune_llama/final-dpo-adapter/: README.md  adapter_config.json
projects/02-LaLaLlama/agent-serivce/finetune_llama/rfp-eval-lora-adapter/: README.md  adapter_config.json
projects/02-LaLaLlama/agent-serivce/internal_data/: contacts.txt  contacts_legacy.txt  contacts_suhyub.txt  incidents.txt  incidents_legacy.txt  incidents_suhyub.txt  migrations.txt  migrations_legacy.txt  migrations_suhyub.txt  tech_stacks.txt  tech_stacks_legacy.txt  tech_stacks_suhyub.txt
projects/02-LaLaLlama/agent-serivce/proposal/: p1.txt  proposal_basic_3of5.html  proposal_practical_4of5.html
projects/02-LaLaLlama/agent-serivce/src/proposal_evaluator_flow/: dynamic_main.py  main.py  main_rag.py  (+2 more)
projects/02-LaLaLlama/agent-serivce/standard/: evaluation_criteria.md
projects/03-ragllama/: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.bat  run.py
projects/03-ragllama/data/structured/: company_info.csv  exp_tag.csv  talent_profile.csv
projects/03-ragllama/scripts/: import_data.py  init_vector_store.py  install_deps.bat  run_chatbot.bat  run_chatbot.py  test_vector_store.py
projects/03-ragllama/src/agents/: react_agent.py
projects/03-ragllama/src/database/: connection.py  models.py  repositories.py
projects/03-ragllama/src/services/: company_extractor.py
projects/03-ragllama/src/streamlit_app/: chatbot_app.py  main.py
projects/03-ragllama/src/tools/: candidate_tools.py  market_tools.py  web_search_tools.py
projects/03-ragllama/src/ui/: pdf_parser.py
projects/03-ragllama/src/vector_store/: __init__.py  embedder.py  faiss_store.py  knowledge_loader.py
projects/03-ragllama/vector_store/: faiss.index  metadata.pkl
projects/04-llamaguard/: .gitignore  README.md  pyproject.toml  requirements.txt
projects/04-llamaguard/CVE/: cve_data.pkl  cve_database.txt  cve_database_with_patches.txt  cve_downloader.py  cve_index.faiss  cve_query_test.py  cve_vectordb.py  filter_with_patches.py  security_examples.json  security_test_dataset.json
projects/04-llamaguard/llama-model/: MEMO.md  README.md  TEST.ipynb  llama_download.py  llama_fine_tuning.py  llama_predict.py  requirements.txt  test_func.py
projects/04-llamaguard/workflow/: config.py  graph.py  nodes.py  state.py
projects/04-llamaguard/workflow/services/: __init__.py  llama_service.py  patch_service.py
projects/07-youcandoit/: .cursorrules  .env.example  .gitignore  README.md  pyproject.toml  start_demo.py
projects/07-youcandoit/agent_orchestrator/: __init__.py  daily_briefing.py  llm_provider.py  model.py  orchestrator.py  summarizer.py
projects/07-youcandoit/backoffice/: __init__.py  app.py  job_executor.py  job_manager.py
projects/07-youcandoit/backoffice/templates/: dashboard.html  job_history.html  jobs.html  registry.html
projects/07-youcandoit/client_configs/: chatgpt_desktop.json  claude_desktop.json  claude_desktop_wsl.json  cursor.json
projects/07-youcandoit/context_registry/: __init__.py  registry.py
projects/07-youcandoit/docs/: CLIENT_SETUP_GUIDE.md  ENVIRONMENT_SETUP.md
projects/07-youcandoit/mcp_server/: briefing_analyzer.py  daily_briefing_collector.py  daily_briefing_runner.py  gmail_mcp_client.py  notion_briefing_integration.py  notion_formatter.py  notion_mcp_client.py  server.py  slack_mcp_client.py
projects/07-youcandoit/scripts/: create_gmail_token.py  dev.py  kill_ports.py  setup_env.py
(+190 files in other folders)
