[project]
name = "proposal_evaluator_flow"
version = "0.1.0"
description = "proposal_evaluator_flow using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "chromadb>=1.1.0",
    "crewai[tools]>=0.201.1,<1.0.0",
    "langchain-community>=0.3.30",
    "langchain-huggingface>=0.3.1",
    "sentence-transformers>=5.1.1",
    "torch>=2.8.0",
]

[project.scripts]
kickoff = "proposal_evaluator_flow.main:kickoff"
run_crew = "proposal_evaluator_flow.main:kickoff"
plot = "proposal_evaluator_flow.main:plot"
main_rag = "proposal_evaluator_flow.main_rag:run_main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "flow"
